kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoseo-meet-web-service
spec:
  selector:
    app: hoseo-meet-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
